Make grey darker

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 -----   Reset   -----
 ------------------------------------------*/
 
-html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}.clearfix:before,.clearfix:after{content:" ";display:table;}.clearfix:after {clear:both;}html,body{height:100%;overflow-x:hidden;}
+html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}a{margin:0;padding:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:bold}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #8E8E8E;margin:1em 0;padding:0}input,select{vertical-align:middle}.clearfix:before,.clearfix:after{content:" ";display:table;}.clearfix:after {clear:both;}html,body{height:100%;overflow-x:hidden;}
 
 /* --------------------------------------
 -----   COLORS   -----
@@ -86,8 +86,8 @@ body {
 }
 a {
 	text-decoration: none;
-	color: #ccc;
-	border-bottom: 1px dotted #ccc;
+	color: #8E8E8E;
+	border-bottom: 1px dotted #8E8E8E;
 }
 p {
 	margin: 40px 0;
@@ -221,7 +221,7 @@ h4 + p {
 .section-subtitle {
 	font-size: 12px;
 	line-height: 18px;
-	color: #ccc;
+	color: #8E8E8E;
 	text-transform: uppercase;
 	font-weight: 700;
 	display: block;
@@ -370,7 +370,7 @@ h4 + p {
 #posts-list time {
 	font-size: 12px;
 	line-height: 12px;
-	color: #ccc;
+	color: #8E8E8E;
 	width: 115px;
 	text-transform: uppercase;
 	float: left;
@@ -381,7 +381,7 @@ h4 + p {
 	content: "";
 	width: 5px;
 	height: 5px;
-	background: #ccc;
+	background: #8E8E8E;
 	float: right;
 	margin: 3px 15px 0 0;
 }
@@ -527,13 +527,13 @@ figcaption {
 .projects-list span {
 	font-size: 12px;
 	line-height: 12px;
-	color: #ccc;
+	color: #8E8E8E;
 	text-transform: uppercase;
 	font-weight: 400;
 }
 
 .projects-list a:hover {
-	box-shadow: 6px 5px 0 0 #ccc;
+	box-shadow: 6px 5px 0 0 #8E8E8E;
 }
 .projects-list a:hover .caption {
 	opacity: 1;
