--- a/css/style.css
+++ b/css/style.css
@@ -613,5 +613,14 @@ a, #posts-list li, #posts-list time, .projects-list .caption {
 	.projects-list li {
 		margin: 20px 0 0 0 !important;
 	}
+}
 
+@media all and (min-width: 1575px) {
+
+  .main-header.home{
+    background-size: 70%;
+  }
+  .wrapper-home {
+    left: 0;
+  }
 }
