--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
             <ul class="social">
                 <li><a href="https://twitter.com/mattjg908">Twitter</a></li>
                 <li><a href="https://github.com/mattjg908">GitHub</a></li>
-                <li><a href="https://linkedin.com/in/mattgalvin9">LinkedIn</a></li>
+                <li><a href="https://linkedin.com/in/mattg9">LinkedIn</a></li>
             </ul>
 
         </div>
